Fix weird overflow in certain posts

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import url('prism-highlight-colors.css');
 
+html {
+  width: 100%
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -150,8 +154,9 @@
 
   /* Centrar en la página el título principal */
   main {
+    width: 100%;
     max-width: 1100px;
-    padding: 0 10vw 1rem 10vw;
+    padding: 0 9vw 1rem 9vw;
   }
   article {
     width: 100%;
